--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <headr>
-            <hi> title do Site</hi>
+            <hi>Cursos grátis</hi>
         <headr>
         <article>
-            <h2>Artigo 001</h2>
-            <p> texto do artigo 001</p>
+            <h2>curso de HTML5 com CSS3</h2>
+            <p>lorem</p>
        </article>
        <article>
-        <h2>Artigo 002</h2>
-        <p>Texto Artigo 002</p>
+        <h2>\curso de Javascript</h2>
+        <p>lorem</p>
        </article>   
     </main>
 </body>
