--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>títolo do Site</title>
+    <title>Site Curso em Video</title>
 </head>
 <body>
     <main>
@@ -12,11 +12,11 @@
         <headr>
         <article>
             <h2>curso de HTML5 com CSS3</h2>
-            <p>lorem</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde odio aperiam molestiae repellendus, delectus ex minus necessitatibus vel aspernatur iste dicta dolores quibusdam aliquid amet a nesciunt pariatur commodi minima.</p>
        </article>
        <article>
         <h2>\curso de Javascript</h2>
-        <p>lorem</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate odit quod atque, nam voluptatibus omnis consequatur corporis est fugit autem quo nemo dolor excepturi ab assumenda eveniet adipisci aliquid iste!</p>
        </article>   
     </main>
 </body>
