--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <main>
         <headr>
-            <hi>Cursos grátis</hi>
+            <h1>Cursos grátis</h1>
         <headr>
         <article>
             <h2>curso de HTML5 com CSS3</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde odio aperiam molestiae repellendus, delectus ex minus necessitatibus vel aspernatur iste dicta dolores quibusdam aliquid amet a nesciunt pariatur commodi minima.</p>
        </article>
        <article>
-        <h2>\curso de Javascript</h2>
+        <h2>Curso de Javascript</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate odit quod atque, nam voluptatibus omnis consequatur corporis est fugit autem quo nemo dolor excepturi ab assumenda eveniet adipisci aliquid iste!</p>
        </article>   
     </main>
