--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <headr>
-            <hi> title do Site</hi>
+            <h1> title do Site</h1>
         <headr>
         <article>
             <h2>Artigo 001</h2>
